<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="org.who.ddccverifier.views.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_ScanFragment"
            app:destination="@id/QRScanFragment" />
    </fragment>

    <fragment
        android:id="@+id/QRScanFragment"
        android:name="org.who.ddccverifier.views.ScanFragment"
        android:label="@string/qrscan_fragment_label"
        tools:layout="@layout/fragment_scan">

        <action
            android:id="@+id/action_ScanFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_ScanFragment_to_ResultFragment"
            app:destination="@id/QRResultFragment">
        </action>
    </fragment>

    <fragment
        android:id="@+id/QRResultFragment"
        android:name="org.who.ddccverifier.views.ResultFragment"
        android:label="@string/qrresult_fragment_label"
        tools:layout="@layout/fragment_result">

        <argument
            android:name="qr"
            app:argType="string"
            app:nullable="true" />

        <action
            android:id="@+id/action_ResultFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>