<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".views.ResultFragment">

    <LinearLayout
        android:id="@+id/tv_result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:elevation="2dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="@drawable/rounded_pill"
        app:layout_constraintBottom_toTopOf="@id/tv_result_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <info.androidhive.fontawesome.FontTextView
            android:id="@+id/tv_result_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_check_circle_solid"
            android:textSize="28dp"
            android:textColor="@color/white"
            app:solid_icon="true" />

        <TextView
            android:id="@+id/tv_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_status_verified"
            android:textSize="28dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/tv_result_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="15dp"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_result_header"
        app:layout_constraintBottom_toTopOf="@id/bt_result_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/tv_result_card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_result_scan_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="April 06, 1:23pm - COVID-19 Vaccination"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_result_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John Anyperson"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/tv_result_person_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DoB: Feb 24, 1982, Female"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_result_identifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID: 2342342343"
                android:textSize="16dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="#BBBBBB" />

            <LinearLayout
                android:id="@+id/ll_result_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="#BBBBBB" />

            <TextView
                android:id="@+id/tv_result_test_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SARS-CoV-2 Test Result"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/tv_result_test_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/ll_result_test_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_test_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_date_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_test_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jul 12, 2021"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_test_type_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_test_type_detail_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_type_detail_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_test_type_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nucleic acid amplification with probe detection"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_result_vaccine_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SARS-CoV-2 mRNA Vaccine"
                android:textAlignment="center"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/tv_result_dose_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dose: 1 of 2"
                android:textAlignment="center"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/ll_result_dose_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_dose_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_date_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_dose_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jul 12, 2021"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_next_dose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_next_dose_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_next_dose_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_next_dose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aug 1, 2021"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_vaccine_valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_vaccine_valid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_valid_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_vaccine_valid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dec 12, 2021"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_vaccine_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_vaccine_info_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_product_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_vaccine_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Spikevax (#PT123F), Moderna"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_vaccine_info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_vaccine_info2_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_ma_holder_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_vaccine_info2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Moderna Inc"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_centre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_centre_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_location_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_centre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Vaccination Site, USA"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_hcid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_hcid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_hcpi_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_hcid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2342342343"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_pha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_pha_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_pha_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_pha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2342342343"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_hw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_result_hw_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose_hw_label"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_result_hw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2342342343"
                    android:textAlignment="viewEnd"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="#BBBBBB" />

            <LinearLayout
                android:id="@+id/ll_result_signed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <info.androidhive.fontawesome.FontTextView
                    android:id="@+id/tv_result_signed_by_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_check_circle_solid"
                    android:textColor="@color/success100"
                    android:textSize="16dp"
                    app:solid_icon="true" />

                <TextView
                    android:id="@+id/tv_result_signed_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Signed by CVS Health on Sep 26, 2021"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_valid_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <info.androidhive.fontawesome.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_check_circle_solid"
                    android:textColor="@color/success100"
                    android:textSize="16dp"
                    app:solid_icon="true" />

                <TextView
                    android:id="@+id/tv_result_valid_until"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Valid Until on Jun 13, 2023"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bt_result_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/close"
        android:textSize="18dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_card"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>